Enhance correlation matrix processing and network analysis
- Updated subproject reference in lrgsglib.
- Modified plotlib.py to include additional imports for plotting functionalities.
- Enhanced shared.py by adding imports for hierarchical clustering.
- Improved corrmat.py with new functions for processing correlation networks, including:
  - Added spectral cleaning and non-finite value checks in build_corr_network.
  - Introduced process_network_for_phase for comprehensive network analysis per phase.
  - Added build_corrmat_single_band for single frequency band correlation matrix construction.
  - Implemented warnings for numerical instabilities and non-finite values during filtering.
  - Enhanced validation of connected components in correlation networks.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.defaultInterpreterPath": "/home/opisthofulax/anaconda3/envs/lapbrain/bin/python",
-    "python.analysis.extraPaths": ["/home/opisthofulax/Documents/research+/brain_network/lrg_eegfc/lrgsglib/src/"]
+    "python.analysis.extraPaths": ["/home/opisthofulax/anaconda3/envs/lapbrain/lib/python312.zip", "/home/opisthofulax/anaconda3/envs/lapbrain/lib/python3.12", "/home/opisthofulax/anaconda3/envs/lapbrain/lib/python3.12/lib-dynload", "/home/opisthofulax/anaconda3/envs/lapbrain/lib/python3.12/site-packages", "/home/opisthofulax/Documents/research+/brain_network/lrg_eegfc/src", "/home/opisthofulax/Documents/research+/brain_network/lrg_eegfc/lrgsglib/src"]
 }
